fix(styles): update contrast function (#1154)
Using a new algorithm to calculate color contrast as the old one did not satisfy WCAG 2.1 AA in all cases (success button). The new check is based on this blogpost https://codetuts.dev/text-contrast-sass/ with adaptions for modern sass syntax and our needs.

--- a/packages/styles/src/components/utilities.scss
+++ b/packages/styles/src/components/utilities.scss
@@ -10,6 +10,7 @@
 @use './../variables/spacing';
 @use './../variables/grid';
 @use './../functions/color' as color-fn;
+@use './../functions/contrast' as contrast-fn;
 @use './../placeholders/color' as color-ph;
 
 .bold {
@@ -67,7 +68,7 @@ span.spacer {
     --post-bg-rgb: #{color-fn.rgb-values($color)};
     @extend %color-background-rgba;
 
-    @if (color-fn.get-contrast-color($color) != #000) {
+    @if (contrast-fn.light-or-dark($color) == 'dark') {
       @extend %color-background-dark-variables;
     } @else {
       @extend %color-background-light-variables;
